--- a/flexbox.html
+++ b/flexbox.html
@@ -128,5 +128,17 @@
       <div style="background-color: lightpink; width: 50px;">item 3</div>
       <div style="background-color: lightpink; width: 50px;">item 4</div>
     </div>
+		<div style="
+      display: flex;
+      margin-top: 30px;
+      flex-direction: row;
+      justify-content: space-between;
+
+    ">
+      <div style="background-color: red; width: 60px;">item 1</div>
+      <div style="background-color: red; width: 60px;">item 2</div>
+      <div style="background-color: red; width: 60px;">item 3</div>
+      <div style="background-color: red; width: 60px;">item 4</div>
+    </div>
   </body>
 </html>
