--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       </section>
     </main>
     </br>  
-    <a href="clone.html">next page</a>
+    <a href="index.html">next page</a>
   </body>
 </html>
 
